--- a/css/layout.css
+++ b/css/layout.css
@@ -10,7 +10,7 @@ header {
   align-items: center;
   background-color: var(--color-petroleo);
   z-index: 1000;
-  box-shadow: 0 0.1875rem 0.375rem rgba(0, 0, 0, 0.06); /* 3px 6px */
+  box-shadow: 0 0.1875rem 0.375rem rgba(255, 255, 255, 0.06); /* 3px 6px */
 }
 
 /* Logo */
@@ -22,7 +22,7 @@ header {
   justify-content: center;
   margin-left: 0.625rem; /* 10px */
   background-color: white;
-  border: 0.25rem solid #003d51; /* 4px */
+  border: 0.25rem solid #ff7c01d8; /* 4px */
   border-radius: 0.625rem; /* 10px */
   transition: border-color 0.3s ease, filter 0.3s ease;
 }
@@ -54,7 +54,7 @@ header {
   border-left: 0.25rem solid var(--color-acento); /* 4px */
   border-right: 0.25rem solid var(--color-acento);
   transition: background-color 220ms ease, border-color 220ms ease;
-  color: #ff5300;
+  color: #ffffff;
 }
 
 .menu-principal li {
@@ -72,7 +72,7 @@ header {
 }
 
 .menu-principal li:hover {
-  color: var(--color-acento);
+  color: #ffffff;
   transform: translateY(-0.1875rem); /* -3px */
 }
 
@@ -91,7 +91,7 @@ header {
 /* Enlaces dentro del nav */
 .link {
   text-decoration: none;
-  color: var(--color-blanco);
+  color: #ffffff;
   font-weight: 600;
   display: block;
 }
@@ -166,7 +166,7 @@ footer {
   text-align: center;
 }
 
-.footer-info h4 {
+.footer-info h2 {
   margin: 0.1875rem 0; /* 3px */
   font-weight: 600;
   font-size: 1rem;
