--- a/css/secciones/index.css
+++ b/css/secciones/index.css
@@ -181,7 +181,7 @@ details > summary::marker {
 
 .botones > * {
   width: 14.375rem;
-  background-color: #ff5300;
+  background-color: #C44601;
   color: white;
   border: none;
   padding: 0.75rem 1.25rem;
