--- a/css/secciones/mantenimiento.css
+++ b/css/secciones/mantenimiento.css
@@ -55,7 +55,7 @@ p {
 
 .boton-volver {
   display: inline-block;
-  background: #ff5300;
+  background: #000000;
   color: white;
   padding: 0.75rem 1.375rem;
   border-radius: 0.625rem;
