Cambios menores para que valide todo Axe DevTools

--- a/css/layout.css
+++ b/css/layout.css
@@ -170,7 +170,7 @@ footer {
 
 .footer-contacto a {
   color: #93c5fd;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 .footer-contacto a:hover {
