--- a/css/secciones/contacto.css
+++ b/css/secciones/contacto.css
@@ -150,12 +150,12 @@ main {
 .contacto textarea {
   border-radius: 0.5rem;
   border: 1px solid #ff5300;
-  padding: 0.625rem;
+  padding: 0.425rem;
   width: 100%;
   max-width: 100%;
-  font-size: 0.5625rem;
+  font-size: 0.7625rem;
   font-weight: bolder;
-  color: #e34e03;
+  color: #000000;
   box-sizing: border-box;
 }
 
